# ikut_python

./: .flake8  .gitignore  README.md  history_graph.py  keras2savedmodel.py  keras_predict_frame.py  label_path.py  mnist.py  move_core_ml_directories.py  movie_length.py  predict_frame.py  pyproject.toml  s2_data.py  s2_make_dataset.py  s2_predict.py  s2_train.py
.github/workflows/: check.yml
model/: model.tflite
